--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.9.1
 django==5.2.4
+django-cors-headers==4.7.0
 djangorestframework==3.16.0
 djangorestframework-simplejwt==5.5.0
 pip==24.0
