--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ djangorestframework==3.16.0
 djangorestframework-simplejwt==5.5.0
 pip==24.0
 pyjwt==2.9.0
+python-decouple==3.8
 sqlparse==0.5.3
 uv==0.7.21
 gunicorn
